[package]
name = "kvs"
version = "0.1.0"
description = "A key-value store"
edition = "2024"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[[bench]]
name = "kvs"
harness = false

[[bench]]
name = "server"
harness = false

[dependencies]
bincode = "1.3"
clap = { version = "4.5.57", features = ["derive"] }
criterion = "0.3"
crossbeam = "0.8.4"
failure = "0.1.8"
num_cpus = "1.17.0"
rayon = "1.11.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
slog = "2"
slog-async = "2"
slog-scope = "4.4.1"
slog-term = "2"

